tls/myapp-tls-ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-tls-example-ingress
spec:
  tls:
  - hosts:
      - test.info
    secretName: myapp-secret-tls
  rules:
    - host: test.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-internal-service
                port:
                  number: 8080
